--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "next-translate": "^0.17.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "styled-components": "^5.1.1"
+    "react-sticky-box": "^0.9.3",
+    "styled-components": "^5.1.1",
+    "styled-icons": "^10.16.0"
   },
   "devDependencies": {
     "@types/node": "^14.0.27",
